[tool.poetry]
name = "stochastic-simulation"
version = "0.1.0"
description = ""
authors = ["Vladislav Illarionov <vladislavillarionov32@gmail.com>"]
readme = "README.md"
packages = [{include = "stochastic_simulation"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.0"
matplotlib = "^3.6.2"
scipy = "^1.9.3"
seaborn = "^0.12.1"
pandas = "^1.5.2"
pymle = {git = "https://github.com/jkirkby3/pymle.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
